'login_page_added_HAPPY_MAF!!!!'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^6.0.5
+  equatable: ^1.2.3
+  google_fonts: ^1.1.0
+  flutter_login: ^1.0.14
+  page_transition: ^1.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,6 +48,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/superCard_log_1.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
