--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^6.0.3  
   flutter_bloc: ^6.0.5
   equatable: ^1.2.3
   google_fonts: ^1.1.0
   flutter_login: ^1.0.14
   page_transition: ^1.1.6
+  
 
 
   # The following adds the Cupertino Icons font to your application.
