--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_login: ^1.0.14
   page_transition: ^1.1.6
   material_design_icons_flutter: 4.0.5755
+  flutter_circular_slider: ^2.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
