--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   page_transition: ^1.1.6
   material_design_icons_flutter: 4.0.5755
   flutter_circular_slider: ^2.5.0
+  google_maps_flutter: ^1.0.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
