--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - assets/images/dimdimgreen.png
     - assets/images/maxgym.png
     - assets/images/luluapple.png
+    - assets/images/dpb.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
